--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
         <ul class="nav__list">
           <li class="nav__item"><a href="#about">About</a></li>
           <li class="nav__item"><a href="#speakers">Speakers</a></li>
-          <li class="nav__item"><a href="#schedule">Schedule</a></li>
+          <!-- <li class="nav__item"><a href="#schedule">Schedule</a></li> -->
           <li class="nav__item"><a href="#rewind">After Video</a></li>
           <li class="nav__item"><a href="#testimonial">Testimonials</a></li>
+          <li class="nav__item"><a href="#sponsors1">Sponsors</a></li>
+          <li class="nav__item"><a href="#faq">FAQs</a></li>
           <li class="nav__item nav__item--reg"><a href="/register.html">Register</a></li>
         </ul>
       </nav>
@@ -107,7 +109,7 @@
             /></span>
             <span class="heading-primary--sub">
               <span class="heading-primary--sub-large">2021 | </span>
-              February 19th - 21st
+              January 29th - 31st
             </span>
           </h1>
           <div class="header__btn-box">
@@ -401,7 +403,7 @@
           </div>
         </section>
 
-        <section id="sponsors" class="sponsors sponsors-temp">
+        <section id="sponsors1" class="sponsors sponsors-temp">
           <div class="container">
             <div class="sponsors__container sponsors__container--main">
               <h5
@@ -650,17 +652,17 @@
                   href="https://studentpartners.microsoft.com/en-us"
                   target="_blank"
                   style="margin: auto"
-                  ><img class="sponsors__img" src="img/sponsors/msp.svg" alt=""
-                /></a>
-                <a
-                  href="https://studentpartners.microsoft.com/en-us"
-                  target="_blank"
-                  style="margin: auto"
                   ><img
                     class="sponsors__img"
                     src="img/sponsors/msp2.svg"
                     alt=""
                 /></a>
+                <a
+                href="https://studentpartners.microsoft.com/en-us"
+                target="_blank"
+                style="margin: auto"
+                ><img class="sponsors__img" src="img/sponsors/msp.svg" alt=""
+              /></a>
                 <a
                   href="https://www.youtube.com/channel/UCpr-AwJ4AyzQSupU9HuFWOg"
                   target="_blank"
