--- a/sponsor.html
+++ b/sponsor.html
@@ -88,7 +88,7 @@
         </div>
         <ul class="nav__list">
           <li class="nav__item"><a href="/index.html#about">Back to home</a></li>
-          <li class="nav__item nav__item--reg"><a href="#">Register</a></li>
+          <li class="nav__item nav__item--reg"><a href="/register.html">Register</a></li>
         </ul>
       </nav>
 
